kubes/django-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domains-django-test
  labels:
    app: domains-test
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains-test
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains-test
        part: django
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-test-google-creds
        - name: privkey
          secret:
            secretName: domains-test-jwt-priv
      containers:
        - name: gunicorn
          image: as207960/domains-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--timeout=90", "as207960_domains.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-test-django
spec:
  podSelector:
    matchLabels:
      app: domains-test
      part: django
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: domains-test
          part: nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domains-celery-test
  labels:
    app: domains-test
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains-test
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains-test
        part: celery
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-test-google-creds
        - name: privkey
          secret:
            secretName: domains-test-jwt-priv
      containers:
        - name: celery
          image: as207960/domains-django:(version)
          imagePullPolicy: Always
          command: ["celery", "-A", "as207960_domains", "worker", "--loglevel=INFO", "-c", "32"]
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-test-celery
spec:
  podSelector:
    matchLabels:
      app: domains-test
      part: celery
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domains-rpc-test
  labels:
    app: domains-test
    part: rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains-test
      part: rpc
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains-test
        part: rpc
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-test-google-creds
        - name: privkey
          secret:
            secretName: domains-test-jwt-priv
      containers:
        - name: rpc
          image: as207960/domains-django:(version)
          imagePullPolicy: Always
          command: ["sh", "-c", "python3 manage.py run-rpc"]
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-test-rpc
spec:
  podSelector:
    matchLabels:
      app: domains-test
      part: rpc
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: domains-django-test
  labels:
    app: domains-test
    part: django
spec:
  selector:
    app: domains-test
    part: django
  ports:
    - port: 8000
      targetPort: 8000
