kubes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domains-django
  labels:
    app: domains
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains
        part: django
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-google-creds
        - name: privkey
          secret:
            secretName: domains-jwt-priv
        - name: fido-metadata
          emptyDir: {}
      containers:
        - name: gunicorn
          image: as207960/domains-django:(version)
          imagePullPolicy: IfNotPresent
          command: ["gunicorn", "-w", "4", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "as207960_domains.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
            - mountPath: "/fido/"
              name: fido-metadata
          envFrom: *envFrom
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-django
spec:
  podSelector:
    matchLabels:
      app: domains
      part: django
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-cronjob
spec:
  podSelector:
    matchLabels:
      app: domains
      part-type: cronjob
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-celery
  labels:
    app: domains
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains
        part: celery
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-google-creds
        - name: privkey
          secret:
            secretName: domains-jwt-priv
      containers:
        - name: grpc
          image: as207960/domains-django:(version)
          imagePullPolicy: IfNotPresent
          command: ["celery",  "-A", "as207960_domains", "worker", "--loglevel=INFO", "-c", "4"]
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-celery
spec:
  podSelector:
    matchLabels:
      app: domains
      part: celery
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-whois-grpc
  labels:
    app: domains
    part: whois
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains
      part: whois
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains
        part: whois
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-google-creds
        - name: privkey
          secret:
            secretName: domains-jwt-priv
      containers:
        - name: grpc
          image: as207960/domains-django:(version)
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "python3 manage.py grpcserver -v 2 --traceback"]
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-django
spec:
  podSelector:
    matchLabels:
      app: domains
      part: whois
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: whois
          part: django
    - podSelector:
        matchLabels:
          app: whois
          part: port43
    ports:
    - protocol: TCP
      port: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-rpc
  labels:
    app: domains
    part: rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains
      part: rpc
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains
        part: rpc
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-google-creds
        - name: privkey
          secret:
            secretName: domains-jwt-priv
      containers:
        - name: rpc
          image: as207960/domains-django:(version)
          imagePullPolicy: IfNotPresent
          command: [ "sh", "-c", "python3 manage.py run-rpc" ]
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-rpc
spec:
  podSelector:
    matchLabels:
      app: domains
      part: rpc
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-poll
  labels:
    app: domains
    part: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domains
      part: poll
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: domains
        part: poll
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: epp-ca
        - name: google-creds
          secret:
            secretName: domains-google-creds
        - name: privkey
          secret:
            secretName: domains-jwt-priv
      containers:
        - name: poll
          image: as207960/domains-django:(version)
          imagePullPolicy: IfNotPresent
          command: [ "sh", "-c", "python3 manage.py run-epp-poll centralnic eurid id godaddy nominet rrpproxy switch traficom" ]
          volumeMounts:
            - mountPath: "/ca-cert/"
              name: ca-cert
            - mountPath: "/google-creds/"
              name: google-creds
            - mountPath: "/privkey/"
              name: privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domains-poll
spec:
  podSelector:
    matchLabels:
      app: domains
      part: poll
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: domains-django
  labels:
    app: domains
    part: django
spec:
  selector:
    app: domains
    part: django
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: domains-whois-grpc
  labels:
    app: domains
    part: whois
spec:
  selector:
    app: domains
    part: whois
  ports:
    - port: 50051
      targetPort: 50051
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domains-ingress
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - domains.glauca.digital
      secretName: domains-tls
  rules:
    - host: domains.glauca.digital
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domains-django
                port:
                  number: 8000
